<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasyDrive</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_accel">Start Accelerometer</string>
    <string name="display_speed">Display Speed</string>
    <string name="lock_screen">Start Lock Screen</string>
    <string name="title_activity_sensor">SensorActivity</string>
    <string name="app_status">App Status</string>
    <string name="silenced">Silenced When Active</string>
    <string name="change_pattern">Change Unlock Pattern</string>
    <string name="disable_speed">Change Disable Speed</string>
    <string name="disable_times">Change Disable Times</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="title_activity_speed_adjust">SpeedAdjustActivity</string>
    <string name="OK">OK</string>
    <string name="unlock">Unlock</string>
	<string name="exit_screen">Exit</string>
	<string name="phone">Phone</string>
	<string name="pandora">Pandora</string>
	<string name="music">Music</string>
	<string name="maps">Maps</string>
	<string name="shazam">Shazam</string>
	<string name="first_app_name_launcher">Pandora</string>
	<string name="amazonMp3">Amazon Mp3</string>
	<string name="googlePlayMusic">Google Play Music</string>
	<string name="spotify">Spotify</string>
	<string name="iHeartRadio">iHeartRadio</string>
	<string name="yelp">Yelp</string>
	<string name="gasBuddy">GasBuddy</string>
	<string name="soundCloud">SoundCloud</string>
	<string name="waze">Waze</string>
	<string name="categoryMusic">Music</string>
	<string name="categoryNavigation">Navigation</string>
	<string name="categoryOther">Other</string>
	<string name="chooseCategory">Choose a Category</string>
	<string name="chooseMusicApp">Choose a Music App</string>
	<string name="chooseNavigationApp">Choose a Navigation App</string>
	<string name="chooseOtherApp">Choose Other App</string>
	<string name="drivingHabitsPage">Driving Habits</string>
			
	<color name="mycolor1">#585858 </color>
	<string name="title_activity_about">About Application</string>
    <string name="title_activity_help">Help</string>
    <string name="appStats">My Stats</string>
    <string name="launch">Launch</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_stats">Stats</string>
    <string name="title_activity_set_apps">Change Default Applications</string>
    <string name="setApps">Set Apps</string>
    <string name="options">Options</string>
    <string name="title_activity_volume_check_service">VolumeCheckService</string>
    <string name="enabled">Enabled</string>
    <string name="change_speed">Change Activation Speed</string>
    <string-array name="speed_limit">
        <item name="0">0 MPH</item>
        <item name="1">1 MPH</item>
		<item name="5">5 MPH</item>
		<item name="10">10 MPH</item>
		<item name="15">15 MPH</item>
		<item name="20">20 MPH</item>
		<item name="25">25 MPH</item>
		<item name="30">30 MPH</item>
		<item name="35">35 MPH</item>
		<item name="40">40 MPH</item>
    </string-array>
    <string-array name="speed_limit_values">
        <item name="0">0</item>
        <item name="5">5</item>
		<item name="10">10</item>
		<item name="15">15</item>
		<item name="20">20</item>
		<item name="25">25</item>
		<item name="30">30</item>
		<item name="35">35</item>
		<item name="40">40</item>
    </string-array>
    <string-array name="lock_off_time">
        <item name="5000">5 seconds</item>
        <item name="15000">15 seconds</item>
        <item name="30000">30 seconds</item>
        <item name="45000">45 seconds</item>
        <item name="60000">1 minute</item>
        <item name="120000">2 minutes</item>
        <item name="300000">5 minutes</item>
    </string-array>
    <string-array name="lock_off_time_values">
        <item name="5000">5000</item>
        <item name="15000">15000</item>
        <item name="30000">30000</item>
        <item name="45000">45000</item>
        <item name="60000">60000</item>
        <item name="120000">120000</item>
        <item name="300000">300000</item>
    </string-array>
    <string name="change_speed_min">Change Minimum Speed</string>
    <string name="change_app">Change Default Applications</string>
    <string name="about_app">About Application</string>
    <string name="launch_lock">Launch Lockscreen</string>
    <string name="display_speed_data">Display Speed</string>
    <string name="display_accel">Display Accelerometer Data</string>
    <string name="showChart">Update Chart</string>
    <string name="show_chart">Show Driving Habits Chart</string>
	<string name="terminate_app">Terminate App</string>
	<string name="change_temp_lock_off">Postpone LockScreen</string>
	<string name="phoneIcon">Phone Image Icon</string>
	<string name="secondIcon">Second Image Icon</string>
	<string name="thirdIcon">Third Image Icon</string>
	<string name="fourthIcon">Fourth Image Icon</string>
	<string name="enabled_pref">Replace the set lockscreen with EasyDrive</string>
	<string name="silenced_pref">Silence phone when the lockscreen is active</string>
	<string name="speed_pref">Change the minimum speed required to activate the lockscreen</string>
	<string name="postpone_pref">Temporarily halt the lockscreen from appearing</string>
	<string name="app_pref">Select the apps that appear on the EasyDrive lockscreen</string>
	<string name="chart_pref">Display chart of movement data pulled from the phone</string>
	<string name="help_page">
	    Easy Drive replaces your normal lock screen with a custom page that links to three custom set apps.
		\n\nTo use Easy Drive\'s automatic launch feature, set the "enabled" option to ON, and access the "Change Minimum Speed" option to set the speed at which Easy Drive will automatically launch.
		\n\nYou can change which apps to set on your home screen by accessing the "Change Default Applications" option. You can only select apps from the premade list, and you may only select apps that are currently installed on your device.
		\n\nTo exit the app, select the EXIT button on the main page. This will stop the Easy Drive screen from automatically loading for a set period of time. You can change this postponement duration by accessing the "Postpone LockScreen" option from the menu page.
	</string>
	<string name="deleteData">Delete Data</string>
</resources>
