<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- <intent android:action=".ShowSettingsActivity"/> -->
    
	<intent android:action="android.intent.action.VIEW"
		android:data="http://developer.android.com" />
    
	<SwitchPreference
        android:key="button_app_enabled_key"
        android:title="@string/enabled"
        android:persistent="true"
        android:summary="@string/enabled_pref" />
	<SwitchPreference
        android:key="button_enable_silencing"
        android:title="@string/silenced"
        android:persistent="true"
        android:summary="@string/silenced_pref" />
	<PreferenceScreen
		android:key="button_change_applications"
		android:title="@string/change_app"
		android:summary="@string/app_pref" >
	</PreferenceScreen>
	<PreferenceScreen
		android:key="button_show_chart"
		android:title="@string/show_chart"
		android:summary="@string/chart_pref" >
    </PreferenceScreen>
	<ListPreference
		android:key="button_speed_change_key"
		android:persistent="true"
		android:entries="@array/speed_limit"
		android:summary="@string/speed_pref"
		android:entryValues="@array/speed_limit_values"
		android:title="@string/change_speed_min" />	
	<ListPreference
		android:key="button_temp_lock_off"
		android:persistent="true"
		android:entries="@array/lock_off_time"
		android:summary="@string/postpone_pref"
		android:entryValues="@array/lock_off_time_values"
		android:title="@string/change_temp_lock_off" />	
    <PreferenceScreen
		android:key="button_help_app"
		android:title="@string/help">
    </PreferenceScreen>
    <PreferenceScreen
		android:key="button_launch_lockscreen"
		android:title="@string/launch_lock">
    </PreferenceScreen>
    <PreferenceScreen
		android:key="button_terminate_app"
		android:title="@string/terminate_app">
    </PreferenceScreen>
</PreferenceScreen>