
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"	
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
	android:background="@color/mycolor1"
    android:orientation="vertical"
     >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

         <ImageView
            android:id="@+id/droid"
			android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/droidupdated" /> 
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/homelinearlayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/homeupdated"
            android:visibility="invisible"
            android:id="@+id/home"
            />
    </LinearLayout>
    
    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>
 
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        
	    <Button
	        android:id="@+id/phoneButton"
	        android:layout_width="150dp"
	        android:layout_height="80dp"
	        android:layout_alignParentTop="true"
	        android:layout_centerInParent="true"
	        android:layout_marginTop="100dp"
	        android:onClick="openApp"
	        android:text="@string/phone" />
	    
	    <ImageView
	        android:id="@+id/phoneIcon"
	        android:layout_width="150dp"
	        android:layout_height="60dp"
	        android:layout_alignParentTop="true"
	        android:layout_marginTop="110dp"
	        android:layout_marginLeft="20dp"
	        android:layout_toLeftOf="@id/phoneButton"
	        android:visibility="visible"
	    />
	    
	    <Button
	        android:id="@+id/pandoraButton"
	        android:layout_width="150dp"
	        android:layout_height="80dp"
	        android:layout_below="@+id/phoneButton"
	        android:layout_centerInParent="true"
	        android:onClick="openApp"
	        android:text="@string/pandora" />
	        
	   	<ImageView
	        android:id="@+id/pandoraIcon"
	        android:layout_width="150dp"
	        android:layout_height="60dp"
	        android:layout_toLeftOf="@id/pandoraButton"
	        android:layout_below="@+id/phoneButton"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="20dp"
	        android:visibility="visible"
	    />
	   	
	    <Button
	        android:id="@+id/mapsButton"
	        android:layout_width="150dp"
	        android:layout_height="80dp"
	        android:layout_below="@+id/pandoraButton"
	        android:layout_centerInParent="true"
	        android:onClick="openApp"
	        android:text="@string/maps" />
	    
	    <ImageView
	        android:id="@+id/mapsIcon"
	        android:layout_width="150dp"
	        android:layout_height="60dp"
	        android:layout_below="@+id/pandoraButton"
	        android:layout_toLeftOf="@id/mapsButton"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="20dp"
	        android:visibility="visible"
	    />
	    
	    <Button
	        android:id="@+id/shazamButton"
	        android:layout_width="150dp"
	        android:layout_height="80dp"
	        android:layout_below ="@+id/mapsButton"
	        android:layout_centerInParent="true"
	        android:onClick="openApp"
	        android:text="@string/shazam" />
	    
	    <ImageView
	        android:id="@+id/shazamIcon"
	        android:layout_width="150dp"
	        android:layout_height="60dp"
	        android:layout_below="@+id/mapsButton"
	        android:layout_toLeftOf="@id/shazamButton"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="20dp"
	        android:visibility="visible"
	    />
	                
	    <Button
	        android:id="@+id/exitButton"
	        android:layout_width="150dp"
	        android:layout_height="80dp"
	        android:layout_below="@+id/shazamButton"
	        android:layout_centerInParent="true"
	        android:onClick="exitLockScreen"
	        android:text="@string/exit_screen" />
	    
	    </RelativeLayout>

</RelativeLayout>